kubernetes/applications/homer/homer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  namespace: homelab
  annotations:
    kubernetes.io/ingress.class: nginx
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.150
spec:
  ingressClassName: nginx
  rules:
    - host: homer.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer
                port:
                  number: 8080
